# ShareFy

./: .gitignore  README.md  alembic.ini  env_dist  mydatabase.db  pyproject.toml
app/: Dockerfile  create_env_file.sh  enums.py  logger.py  main.py  mydatabase.db  permission.py  requirements.txt
app/backend/: session.py  smtp.py
app/data_managers/: auth.py  base.py  user.py
app/database/: session.py
app/models/: auth.py
app/models/v1/: auth.py  user.py
app/routers/: auth.py  token.py  user.py
app/routers/v1/: auth.py  token.py  user.py
app/schemas/: auth.py
app/schemas/v1/: auth.py  token.py  user.py
app/services/: auth.py  base.py  user.py
app/templates/email/: account_created.html
app/tests/: assertions.py  conftest.py  data_test_generator.py
app/tests/unit/routers/: test_auth.py  test_user.py
app/utils/: auth.py  smtp.py  token.py  utils.py
infra/: docker-compose.yml
infra/data/: postmaster.pid
infra/data/base/1/: 2619  2696  2840  2841
infra/data/base/16384/: 1247  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  2224  25323  25329  25330  25332  2579  2604  2606  2606_fsm  2606_vm  2608  2608_vm  2610  2610_vm  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  (+10 more)
infra/data/global/: 1260  1262  2671  pg_control  pg_internal.init
infra/data/pg_xact/: 0000
infra/docs/: ShareFy.postman_collection.json
infra/nginx/: nginx.conf
