[tool.poetry]
name = "sharefy"
version = "0.1.0"
description = ""
authors = ["aslan <baristan1aslan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"
passlib = "^1.7.4"
python-jose = "^3.3.0"
uvicorn = "^0.23.2"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
