[tool.poetry]
name = "sharefy"
version = "0.1.0"
description = ""
authors = ["aslan <baristan1aslan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"
passlib = "^1.7.4"
python-jose = "^3.3.0"
uvicorn = "^0.23.2"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
alembic = "^1.12.1"
fastapi-mail = "^1.4.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
faker = "^20.0.0"
isort = "^5.12.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
